--- a/index.html
+++ b/index.html
@@ -188,6 +188,8 @@
 						</span>
 						<span class="home-front-selects-items-menu-item"><a href="pages/pageeleventh.html">Page 11</a>
 						</span>
+						<span class="home-front-selects-items-menu-item"><a href="pages/pagetwelfth.html">Page 12</a>
+						</span>
 					</div>
 				</div>
 				<img src="image/home/arrow3.svg">
