--- a/pages/pagetwelfth.html
+++ b/pages/pagetwelfth.html
@@ -6,8 +6,8 @@
 	<link rel="stylesheet" type="text/css" href="../css/style_root.css">
 	<link rel="stylesheet" type="text/css" href="../css/style_headerFooter_mobile.css">
 	<link rel="stylesheet" type="text/css" href="../css/style_headerFooter_desktop.css">
-	<link rel="stylesheet" type="text/css" href="../css/style_pagetenth_mobile.css">
-	<link rel="stylesheet" type="text/css" href="../css/style_pagetenth_desktop.css">
+	<link rel="stylesheet" type="text/css" href="../css/style_pagetwelfth_mobile.css">
+	<link rel="stylesheet" type="text/css" href="../css/style_pagetwelfth_desktop.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700;800&display=swap" rel="stylesheet">
@@ -177,120 +177,13 @@
 		</div>
 	</section>
 <!-- ----------------- -->
-	<section class="container pagetenth-front">
-		<div class="pagetenth-front-container">
-			<div class="pagetenth-front-left">
-				<h1>Главный заголовок статьи</h1>
-				<span>18 февраля 2021</span>
-				<p class="pagetenth-front-left-maintext">Разнообразный и богатый опыт начало повседневной работы по формированию позиции требуют определения и уточнения систем массового участия. Разнообразный и богатый опыт постоянное информационно-пропагандистское обеспечение нашей деятельности обеспечивает широкому кругу (специалистов) участие в формировании дальнейших направлений развития. Идейные соображения высшего порядка, а также начало повседневной работы по формированию позиции влечет за собой процесс внедрения и модернизации новых предложений. Не следует, однако забывать, что новая модель организационной деятельности позволяет выполнять важные задания по разработке форм развития. Идейные соображения высшего порядка, а также реализация намеченных плановых заданий способствует подготовке и реализации новых предложений. Таким образом рамки и место обучения кадров позволяет оценить значение существенных финансовых и административных условий.</p>
-				<div class="pagetenth-front-foto"></div>
-				<h2>Подзаголовок первый</h2>
-				<p class="pagetenth-front-left-text">Таким образом начало повседневной работы по формированию позиции позволяет оценить значение соответствующий условий активизации. Идейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности позволяет выполнять важные задания по разработке соответствующий условий активизации. С другой стороны рамки и место обучения кадров позволяет выполнять важные задания по разработке форм развития. Не следует, однако забывать, что новая модель организационной деятельности позволяет выполнять важные задания по разработке системы обучения кадров, соответствует насущным потребностям. Разнообразный и богатый опыт консультация с широким активом позволяет выполнять важные задания по разработке дальнейших направлений развития. С другой стороны постоянный количественный рост и сфера нашей активности играет важную роль в формировании систем массового участия. Разнообразный и богатый опыт дальнейшее развитие различных форм деятельности позволяет выполнять важные задания по разработке существенных финансовых и административных условий.</p>
-				<h2>Второй подзаголовок</h2>
-				<p class="pagetenth-front-left-text">Повседневная практика показывает, что постоянный количественный рост и сфера нашей активности играет важную роль в формировании направлений прогрессивного развития. Разнообразный и богатый опыт укрепление и развитие структуры требуют от нас анализа позиций, занимаемых участниками в отношении поставленных задач. Повседневная практика показывает, что начало повседневной работы по формированию позиции позволяет выполнять важные задания по разработке существенных финансовых и административных условий. С другой стороны новая модель организационной деятельности позволяет выполнять важные задания по разработке позиций, занимаемых участниками в отношении поставленных задач. Равным образом реализация намеченных плановых заданий требуют определения и уточнения существенных финансовых и административных условий. Равным образом реализация намеченных плановых заданий представляет собой интересный эксперимент проверки дальнейших направлений развития.</p>
-				<div class="pagetenth-front-left-footer-line desktop"></div>
-				<div class="pagetenth-front-left-footer desktop">
-					<div class="pagetenth-front-left-footer-buttons">
-						<span>Статья была полезной?</span>
-						<div class="pagetenth-front-left-footer-buttons-items">
-							<button><span>Да</span></button>
-							<button><span>Нет</span></button>
-						</div>
-					</div>
-					<div class="pagetenth-front-left-footer-media">
-						<span>Поделиться</span>
-						<div class="pagetenth-front-left-footer-media-items">
-							<img src="../image/pagetenth/vk.svg">
-							<img src="../image/pagetenth/fb.svg">
-							<img src="../image/pagetenth/ok.svg">
-							<div class="twiter"><i class="fab fa-twitter"></i></div>
-							<!-- <img  src="../image/pagetenth/twiter.svg"> -->
-							<!-- <i class="fab fa-vk"></i>
-							<i class="fab fa-facebook"></i>
-							<i class="fab fa-odnoklassniki"></i>-->
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="pagetenth-front-right">
-				<div class="pagetenth-front-right-header">
-					<span>Автор статьи</span>
-					<div class="pagetenth-front-right-header-avatar">
-						<div class="avatar"></div>
-						<div class="name_city">
-							<span>Ольга Фёдорова</span>
-							<span>Москва</span>
-						</div>
-					</div>
-					<span>Статьи по теме</span>
-					<h3 class="pagetenth-front-right-header-h31">Юрист на раз-два-три</h3>	
-					<p>Разнообразный и богатый опыт начало повседневной работы по формированию позиции требуют определения и уточнения систем массового участия...</p>
-					<h3 class="pagetenth-front-right-header-h32">Как вернуть права досрочно</h3>
-					<p>Разнообразный и богатый опыт постоянное информационно- пропагандистское обеспечение нашей деятельности обеспечивает...</p>
-				</div>
-				<div class="mobile">
-					<div class="pagetenth-front-left-footer">
-						<div class="pagetenth-front-left-footer-line"></div>
-						<div class="pagetenth-front-left-footer-buttons">
-							<span>Статья была полезной?</span>
-							<div class="pagetenth-front-left-footer-buttons-items">
-								<button><span>Да</span></button>
-								<button><span>Нет</span></button>
-							</div>
-						</div>
-					 </div>
-				</div>
-				
-				<div class="pagesecond-front-main-items-container">	
-					<div class="pagesecond-front-main-items">
-						<div class="pagesecond-front-main-item">
-							<div class="pagesecond-front-main-item-title">
-								<img class="pagesecond-front-main-item-img" src="../image/pagesecond/item1.svg">
-								<div class="pagesecond-front-main-item-title-cont-first">
-									<h3>Получить бесплатно</h3>	
-								</div>	
-							</div>
-							<p class="pagesecond-front-main-item-text">решения и постановления судов по делам, аналогичным вашему</p>
-						</div>
-						<div class="pagesecond-front-main-item">
-							<div class="pagesecond-front-main-item-title">
-								<img class="pagesecond-front-main-item-img" src="../image/pagesecond/item2.svg">
-								<div class="pagesecond-front-main-item-title-cont">
-									<h3>Узнайте шансы</h3>	
-								</div>							
-							</div>
-							<p class="pagesecond-front-main-item-text">по своему делу на основе постановлений и решений судов</p>
-						</div>
-						<div class="pagesecond-front-main-item">
-							<div class="pagesecond-front-main-item-title">
-								<img class="pagesecond-front-main-item-img" src="../image/pagesecond/item3.svg">
-								<div class="pagesecond-front-main-item-title-cont">
-									<h3>Бесплатные ходатайства</h3>	
-								</div>
-							</div>
-							<p class="pagesecond-front-main-item-text">по возврату прав</p>
-						</div>
-						<div class="pagesecond-front-main-item">
-							<div class="pagesecond-front-main-item-title-fourth">
-								<img class="pagesecond-front-main-item-img" src="../image/pagesecond/item4.svg">
-								<div class="pagesecond-front-main-item-title-cont">
-									<h3>Получить видеоинструкцию</h3>	
-								</div>
-							</div>
-							<p class="pagesecond-front-main-item-text-fourth">по возврату прав</p>
-						</div>
-						<div class="pagesecond-front-main-item">
-							<div class="pagesecond-front-main-item-title-fourth">
-								<img class="pagesecond-front-main-item-img" src="../image/pagesecond/item4.svg">
-								<div class="pagesecond-front-main-item-title-cont">
-									<h3>Бесплатный интенсив онлайн</h3>	
-								</div>
-							</div>
-							<p class="pagesecond-front-main-item-text-fourth">“Как вернуть права”</p>
-						</div>
-					</div>			
-				</div>
-			</div>
+	
+	<section class="container pagetwelfth">
+		<div class="pagetwelfth-container">
+			<img src="../image/pagetwelfth/bear.svg">
+			<button>
+				<span>На главную</span>
+			</button>
 		</div>
 	</section>
 	
@@ -327,7 +220,7 @@
 					<div class="desktop">
 						<span class="footer-block-payment-text desktop">Оплатить услуги онлайн</span>
 						<span class="footer-block-payment-text">и в офисах Компании "Автоюрист"</span>
-						<div class="footer-block-payment-icons">
+						<div class="footer-block-payment-icons"> <!-- иконки из fontawesome ? -->
 							<img class="visa" src="../image/footer/visa.svg">
 							<img class="master" src="../image/footer/mcard.svg">
 							<img class="peace" src="../image/footer/mir.svg">
@@ -339,7 +232,7 @@
 			<div class="footer-block-payment mobile">
 				<span class="footer-block-payment-text">Оплатить услуги онлайн</span>
 				<span class="footer-block-payment-text">и в офисах Компании "Автоюрист"</span>
-				<div class="footer-block-payment-icons">
+				<div class="footer-block-payment-icons"> <!-- иконки из fontawesome ? -->
 					<img class="visa" src="../image/footer/visa.svg">
 					<img class="master" src="../image/footer/mcard.svg">
 					<img class="peace" src="../image/footer/mir.svg">
@@ -367,6 +260,7 @@
 					<i class="fab fa-facebook-f"></i>
 					<i class="fab fa-youtube"></i>
 					<i class="fab fa-instagram"></i>
+					<!-- иконки из fontawesome ? -->
 					<img src="../image/footer/Subtract.png">
 					<img src="../image/footer/boosty.png">
 				</div>
