edition of pafes 1 - 4

--- a/pages/pagefourth.html
+++ b/pages/pagefourth.html
@@ -295,8 +295,10 @@
 					<img src="../image/pagefourth/back.svg">
 					<span>Назад</span>
 				</div>
-				<h1 class="pagefourth-alcohol-survey-title">Управление в состоянии алкогольного опьянения</h1>
-				<span class="pagefourth-alcohol-survey-title-two">12.8.1 КоАП РФ</span>
+				<div>
+					<h1 class="pagefourth-alcohol-survey-title">Управление в состоянии <br> алкогольного опьянения</h1>
+					<span class="pagefourth-alcohol-survey-title-two">12.8.1 КоАП РФ</span>
+				</div>
 				<div class="pagefourth-alcohol-survey-blocks">
 					<div class="pagefourth-alcohol-survey-blocks-block">
 						<span class="pagefourth-alcohol-survey-blocks-block-text">У вас первый раз 12.8 или повторный?</span>
